syntax = "proto3";

package initiator;
option go_package = "./;initiator_svc";

message StartGameReq { string jwt = 1; }

message StartGameResp { string game_id = 1; }

service InitiatorService {
    rpc StartGame(StartGameReq) returns (StartGameResp) {}
}
